[package]
name = "ln-simln-jamming"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "reputation-builder"
path = "src/bin/reputation_builder.rs"

[dependencies]
simln-lib = { git = "https://github.com/bitcoin-dev-project/sim-ln", rev = "49d5ae439c646132872c66e74408eebd4b2d30f1" }
sim-cli = { git = "https://github.com/bitcoin-dev-project/sim-ln", rev = "49d5ae439c646132872c66e74408eebd4b2d30f1" }
ln-resource-mgr = { path = "../ln-resource-mgr" }
bitcoin = { version = "0.30.1" }
async-trait = "0.1.73"
anyhow = "1.0.93"
serde_json = "1.0.133"
serde = "1.0.215"
tokio = { version = "1.41.1", features = ["full"] }
simple_logger = "5.0.0"
log = "0.4.22"
triggered = "0.1.2"
csv = "1.3.1"
hex = "0.4.3"
clap = { version = "4.0", features = ["derive"] }
humantime = "2.1.0"
futures = "0.3.31"
rand = "0.8.5"
mockall = "0.13.1"
lightning = { version = "0.0.123" }
tokio-util = { version = "0.7.15", features = ["rt"] }
