[package]
name = "reputation-builder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
csv = "1.3.1"
humantime = "2.1.0"
ln-resource-mgr = { path = "../ln-resource-mgr" }
ln-simln-jamming = { path = "../ln-simln-jamming" }
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.133"
simln-lib = { git = "https://github.com/carlaKC/sim-ln", rev = "e55133e" }
simple_logger = "5.0.0"
tokio = { version = "1.41.1", features = ["full"] }
triggered = "0.1.2"
